--- a/src/app/modules/tabs/tabs.page.html
+++ b/src/app/modules/tabs/tabs.page.html
@@ -1,20 +1,20 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="contacts">
-      <ion-icon name="contacts"></ion-icon>
-      <ion-label>Contacts</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="contacts">
+          <ion-icon name="contacts"></ion-icon>
+          <ion-label>Contacts</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="favorites">
-      <ion-icon name="star"></ion-icon>
-      <ion-label>Favorites</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="favorites">
+          <ion-icon name="star"></ion-icon>
+          <ion-label>Favorites</ion-label>
+      </ion-tab-button>
 
-    <ion-tab-button tab="search">
-      <ion-icon name="search"></ion-icon>
-      <ion-label>Search</ion-label>
-    </ion-tab-button>
+      <ion-tab-button tab="add">
+          <ion-icon name="add-circle"></ion-icon>
+          <ion-label>Add</ion-label>
+      </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
