--- a/src/app/modules/favorites/favorites-page.component.html
+++ b/src/app/modules/favorites/favorites-page.component.html
@@ -10,7 +10,8 @@
   <h2 style="text-align: center" *ngIf="(contacts | async)?.length===0">No favorites added yet...</h2>
   <ion-list>
     <ul>
-      <li *ngFor="let c of (contacts | async)" class="list-item" [class.favorite]="c.isFavorite">
+      <li *ngFor="let c of (contacts | async)" class="list-item" [class.favorite]="c.isFavorite"
+          [routerLink]="'/tabs/contact/'+c.id">
         {{c.name}} {{c.middleName}} {{c.surname}}
       </li>
     </ul>
