Edit modal in progress

--- a/src/app/modules/contact/components/contact-page/contact-page.component.html
+++ b/src/app/modules/contact/components/contact-page/contact-page.component.html
@@ -35,7 +35,7 @@
         <ion-icon name="remove-circle"></ion-icon>
       </ion-button>
       <ion-button color="danger" (click)="onRemove()">Remove</ion-button>
-      <ion-button color="tertiary">Edit</ion-button>
+      <ion-button color="tertiary" (click)="presentModal()">Edit</ion-button>
     </ion-row>
   </form>
 </ion-content>
