--- a/src/app/modules/contact/components/contact-page/contact-page.component.html
+++ b/src/app/modules/contact/components/contact-page/contact-page.component.html
@@ -1,41 +1,42 @@
 <ion-header>
-  <ion-toolbar style="display:flex">
-    <ion-button [routerLink]="'/tabs/contacts'" color="light">
-      <ion-icon name="arrow-dropleft"></ion-icon>
-    </ion-button>
-    <ion-title>
-      {{(contact | async).name}}
-    </ion-title>
-  </ion-toolbar>
+    <ion-toolbar style="display:flex">
+        <ion-button [routerLink]="'/tabs/contacts'" color="light">
+            <ion-icon name="arrow-dropleft"></ion-icon>
+        </ion-button>
+        <ion-title>
+            {{(contact | async).name}}
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form class="form-wrapper" [formGroup]="form" (ngSubmit)="onEdit()">
-    <ion-row>
-      <ion-input readonly formControlName="name" placeholder="*First name" minlength="2"></ion-input>
-    </ion-row>
-    <ion-row>
-      <ion-input readonly formControlName="middleName" placeholder="Middle name"></ion-input>
-    </ion-row>
-    <ion-row>
-      <ion-input readonly formControlName="surname" placeholder="Last name"></ion-input>
-    </ion-row>
-    <ion-row>
-      <ion-input readonly formControlName="phone" type="tel" placeholder="*Phone number" maxlength="20"
-                 minlength="3"></ion-input>
-    </ion-row>
-    <ion-row>
-      <ion-input readonly formControlName="email" type="email" placeholder="Email" minlength="3"></ion-input>
-    </ion-row>
-    <ion-row class="buttons-wrapper">
-      <ion-button *ngIf="!(contact | async).isFavorite" color="success" (click)="onAddToFavorites()">
-        <ion-icon name="star"></ion-icon>
-      </ion-button>
-      <ion-button *ngIf="(contact | async).isFavorite" color="dark" (click)="onRemoveFromFavorites()">
-        <ion-icon name="remove-circle"></ion-icon>
-      </ion-button>
-      <ion-button color="danger" (click)="onRemove()">Remove</ion-button>
-      <ion-button color="tertiary" (click)="presentModal()">Edit</ion-button>
-    </ion-row>
-  </form>
+    <form class="form-wrapper" [formGroup]="form" (ngSubmit)="onEdit()">
+        <ion-row>
+            <ion-input formControlName="name" placeholder="*First name" minlength="2"></ion-input>
+        </ion-row>
+        <ion-row>
+            <ion-input formControlName="middleName" placeholder="Middle name"></ion-input>
+        </ion-row>
+        <ion-row>
+            <ion-input formControlName="surname" placeholder="Last name"></ion-input>
+        </ion-row>
+        <ion-row>
+            <ion-input formControlName="phone" type="tel" placeholder="*Phone number" maxlength="20"
+                       minlength="3"></ion-input>
+        </ion-row>
+        <ion-row>
+            <ion-input formControlName="email" type="email" placeholder="Email" minlength="3"></ion-input>
+        </ion-row>
+        <ion-row class="buttons-wrapper">
+            <ion-button *ngIf="!(contact | async).isFavorite" color="success" (click)="onAddToFavorites()">
+                <ion-icon name="star"></ion-icon>
+            </ion-button>
+            <ion-button *ngIf="(contact | async).isFavorite" color="dark" (click)="onRemoveFromFavorites()">
+                <ion-icon name="remove-circle"></ion-icon>
+            </ion-button>
+            <ion-button color="danger" (click)="onRemove()">Remove</ion-button>
+            <ion-button color="tertiary"
+                        (click)="form.disabled ? form.enable(): onEdit()">{{ form.disabled ? 'Edit' : 'Confirm'}}</ion-button>
+        </ion-row>
+    </form>
 </ion-content>
