Minor fixes, update README

--- a/src/app/modules/add/add-page.component.html
+++ b/src/app/modules/add/add-page.component.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>
-            Search
+            Add contact
         </ion-title>
     </ion-toolbar>
 </ion-header>
